--- a/deegree-core/deegree-core-protocol/deegree-protocol-wmts/pom.xml
+++ b/deegree-core/deegree-core-protocol/deegree-protocol-wmts/pom.xml
@@ -21,7 +21,7 @@
       <url>http://artefacts.deegree.org/repo</url>
       <releases>
         <updatePolicy>never</updatePolicy>
-      </releases>
+      </releases>	
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
@@ -34,5 +34,9 @@
       <artifactId>deegree-core-base</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>    
   </dependencies>
 </project>
