--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <version>3.2-pre8-SNAPSHOT</version>
   <name>deegree</name>
   <description>Framework for OGC Web Service implementations and geospatial applications</description>
-  <url>http://www.deegree.org</url>
+  <url>http://www.deegree.org/</url>
 
   <scm>
     <connection>scm:svn:http://svn.wald.intevation.org/svn/deegree/deegree3/trunk</connection>
@@ -124,7 +124,12 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.6</version>
+            <version>2.12</version>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>2.12</version>
           </plugin>
         </plugins>
       </pluginManagement>
@@ -202,6 +207,10 @@
           <configuration>
             <goals>install</goals>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
         </plugin>
       </plugins>
     </build>
