--- a/deegree-core/deegree-core-protocol/deegree-protocol-wmts/pom.xml
+++ b/deegree-core/deegree-core-protocol/deegree-protocol-wmts/pom.xml
@@ -37,6 +37,10 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
     </dependency>    
   </dependencies>
 </project>
