--- a/deegree-datastores/deegree-tilestores/deegree-tilestore-remotewmts/pom.xml
+++ b/deegree-datastores/deegree-tilestores/deegree-tilestore-remotewmts/pom.xml
@@ -1,17 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>deegree-protocol-wmts</artifactId>
-  <name>deegree-protocol-wmts</name>
+  <artifactId>deegree-tilestore-remotewmts</artifactId>
   <packaging>jar</packaging>
-  <description>Client for accessing remote Web Map Tiling Services</description>
+  <description>Tile store implementation that accesses remote Web Map Tile Service instances</description>
 
   <properties>
-    <deegree.module.status>check</deegree.module.status>
+    <deegree.module.status>ok</deegree.module.status>
   </properties>
 
   <parent>
     <groupId>org.deegree</groupId>
-    <artifactId>deegree-core-protocol</artifactId>
+    <artifactId>deegree-tilestores</artifactId>
     <version>3.2-pre8-SNAPSHOT</version>
   </parent>
 
@@ -21,31 +20,43 @@
       <url>http://artefacts.deegree.org/repo</url>
       <releases>
         <updatePolicy>never</updatePolicy>
-      </releases>	
+      </releases>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
     </repository>
   </repositories>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.jvnet.jaxb2.maven2</groupId>
+        <artifactId>maven-jaxb2-plugin</artifactId>
+        <dependencies>
+          <dependency>
+            <groupId>org.deegree</groupId>
+            <artifactId>deegree-core-geometry</artifactId>
+            <version>${project.version}</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>org.deegree</groupId>
-      <artifactId>deegree-core-base</artifactId>
+      <artifactId>deegree-tilestore-commons</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.deegree</groupId>
-      <artifactId>deegree-core-tile</artifactId>
+      <artifactId>deegree-remoteows-wmts</artifactId>
       <version>${project.version}</version>
-    </dependency>    
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-    </dependency>    
   </dependencies>
 </project>
