added experimental new workspace module

--- a/deegree-core/pom.xml
+++ b/deegree-core/pom.xml
@@ -43,6 +43,7 @@
     <module>deegree-core-theme</module>
     <module>deegree-core-tile</module>    
     <module>deegree-core-protocol</module>
+    <module>deegree-core-workspace</module>
   </modules>
 
 </project>
