--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
   <url>http://www.deegree.org/</url>
 
   <scm>
-    <connection>scm:svn:svn+ssh://svn.wald.intevation.org/deegree/deegree3/branches/3.2-pre11</connection>
-    <developerConnection>scm:svn:svn+ssh://svn.wald.intevation.org/deegree/deegree3/branches/3.2-pre11</developerConnection>
-    <url>svn+ssh://svn.wald.intevation.org/deegree/deegree3/branches/3.2-pre11</url>
+    <connection>scm:git:git@github.com:deegree/deegree3.git</connection>
+    <developerConnection>scm:git:git@github.com:deegree/deegree3.git</developerConnection>
+    <url>https://github.com/deegree/deegree3.git</url>
   </scm>
 
   <repositories>
@@ -179,7 +179,6 @@
         <version>2.1</version>
         <configuration>
           <preparationGoals>clean install</preparationGoals>
-          <tagBase>svn+ssh://svn.wald.intevation.org/deegree/deegree3/tags</tagBase>
           <autoVersionSubmodules>true</autoVersionSubmodules>
           <arguments>-e</arguments>
         </configuration>
